[gd_scene load_steps=10 format=3 uid="uid://c7cafyhhy135a"]

[ext_resource type="Script" path="res://scenes/ship_designer/scripts/ship_designer_ui.gd" id="1_citlv"]
[ext_resource type="PackedScene" uid="uid://cor2bkqrdl620" path="res://scenes/ship_designer/baker.tscn" id="2_jrjbv"]
[ext_resource type="Script" path="res://scenes/ship_designer/scripts/designer_hull_selector.gd" id="4_q4t2f"]
[ext_resource type="Shader" path="res://scenes/ship/shaders/ship.gdshader" id="5_alsfe"]
[ext_resource type="Script" path="res://scenes/ship_designer/scripts/designer_part_selector.gd" id="6_vknnf"]
[ext_resource type="Script" path="res://scenes/ship_designer/scripts/designer_style_selector.gd" id="7_nka4o"]
[ext_resource type="Script" path="res://scenes/ship/scripts/view_ship.gd" id="7_wj4q0"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_3y64e"]
load_path = "res://.godot/imported/2-1_emission.png-67052bb7f4582c6df4039dee2c5765f9.ctex"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_s2s6x"]
shader = ExtResource("5_alsfe")
shader_parameter/heat = 0.0
shader_parameter/emission = 5.0
shader_parameter/emission_color = Color(1, 1, 1, 1)
shader_parameter/shininess = 0.0
shader_parameter/metallic = 0.0
shader_parameter/emission_texture = SubResource("CompressedTexture2D_3y64e")

[node name="ShipDesignerContainer" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_force_pass_scroll_events = false
script = ExtResource("1_citlv")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="TabContainer" type="TabContainer" parent="HBoxContainer"]
custom_minimum_size = Vector2(350, 0)
layout_mode = 2

[node name="Hull" type="ScrollContainer" parent="HBoxContainer/TabContainer"]
layout_mode = 2

[node name="HullSelector" type="GridContainer" parent="HBoxContainer/TabContainer/Hull"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
columns = 2
script = ExtResource("4_q4t2f")

[node name="HullExt" type="ScrollContainer" parent="HBoxContainer/TabContainer"]
visible = false
layout_mode = 2

[node name="HullExtSelector" type="GridContainer" parent="HBoxContainer/TabContainer/HullExt"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
columns = 2
script = ExtResource("4_q4t2f")
empty_allowed = true

[node name="Engine" type="ScrollContainer" parent="HBoxContainer/TabContainer"]
visible = false
layout_mode = 2

[node name="EngineSelector" type="GridContainer" parent="HBoxContainer/TabContainer/Engine"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
columns = 2
script = ExtResource("6_vknnf")

[node name="Style" type="ScrollContainer" parent="HBoxContainer/TabContainer"]
visible = false
layout_mode = 2

[node name="StyleSelector" type="GridContainer" parent="HBoxContainer/TabContainer/Style"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
columns = 2
script = ExtResource("7_nka4o")
empty_allowed = true

[node name="CenterContainer" type="CenterContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="SubViewportContainer" type="SubViewportContainer" parent="HBoxContainer/CenterContainer"]
layout_mode = 2

[node name="SubViewport" type="SubViewport" parent="HBoxContainer/CenterContainer/SubViewportContainer"]
transparent_bg = true
handle_input_locally = false
size = Vector2i(256, 256)
render_target_update_mode = 4

[node name="ShipPreview" type="Sprite2D" parent="HBoxContainer/CenterContainer/SubViewportContainer/SubViewport"]
unique_name_in_owner = true
texture_filter = 3
material = SubResource("ShaderMaterial_s2s6x")
position = Vector2(128, 128)
scale = Vector2(2, 2)
script = ExtResource("7_wj4q0")

[node name="DarkAmbient" type="DirectionalLight2D" parent="HBoxContainer/CenterContainer/SubViewportContainer/SubViewport"]
color = Color(0, 0, 0, 1)
energy = 0.4
blend_mode = 1

[node name="Light" type="DirectionalLight2D" parent="HBoxContainer/CenterContainer/SubViewportContainer/SubViewport"]
rotation = -0.785398
energy = 0.7
blend_mode = 2
height = 0.4

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="Buttons" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/Buttons"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="CancelButton" type="Button" parent="MarginContainer/Buttons/MarginContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
text = "Cancel"

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/Buttons"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="ConfirmButton" type="Button" parent="MarginContainer/Buttons/MarginContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
text = "Confirm"

[node name="Baker" parent="." instance=ExtResource("2_jrjbv")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
bake_on_updates = true
debug_visible = true
